# ollamaspace

./: Dockerfile  README.md  pyproject.toml  requirements.txt
