[tool.poetry]
name = "ollamaspace"
version = "0.1.0"
description = ""
authors = ["Alvin Henrick <share.code@aol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
